<resources>
    <string name="app_name">MovieApp</string>
    <string name="search_hint">Search</string>
    <string name="vote_average">Vote average: </string>
    <string name="action_settings">Action settings</string>
    <string name="tab_1_name">most popular</string>
    <string name="tab_2_name">latest</string>
    <string name="tab_3_name">Highest-rated</string>
    <string name="tab_4_name">airing today</string>
    <string name="api_key_missing">Please obtain your API KEY first from themoviedb.org</string>
    <string name="on_failure">Failed</string>
    <string name="news">News</string>
    <string name="newsFeed">News Feed</string>
    <string name="movies">Movies</string>
    <string name="movie">Movie</string>
    <string name="tv_shows">TV shows</string>
    <string name="tv_show">TV show</string>
    <string name="cast_failed">Falied to get CastList</string>
    <string name="directors">Director: </string>
    <string name="writers">Writers: </string>
    <string name="stars">Stars: </string>
    <string name="Read_more">Read more</string>
    <string name="Hide">Hide</string>
    <string name="Reviews">Reviews: </string>
    <string name="Settings">Settings</string>
    <string name="trailer_error">Trailer not available</string>
    <string name="MovieImageBaseAdress">http://image.tmdb.org/t/p/</string>
    <string name="MovieImageWidth500">w500</string>
    <string name="MovieImageWidth342">w342</string>
    <string name="MovieImageWidth92">w92</string>
    <string name="SeeAll">See all  </string>
    <string name="Seasons">Seasons: </string>
    <string name="Years">Years: </string>
    <string name="Seasons1">Season</string>
    <string name="Website">Website:</string>
    <string name="birth_date">Date of birth:</string>
    <string name="Biography">Biography:</string>
    <string name="actor">Actor</string>
    <string name="filmography">Filmography</string>
    <string name="favourites">Your Favorites</string>
    <string name="watchlist">Your Watchlist</string>
    <string name="ratings">Your Raitings</string>
    <string name="cast">Cast: </string>
    <string name="more">MORE</string>
    <string name="Sign_in">Sign in to Popular Movies</string>
    <string name="message">Sign in to rate movies, manage your Watchlist, and more.</string>
    <string name="not_now">NOT NOW</string>
    <string name="sign">SIGN IN</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">LOGIN</string>
    <string name="login_">Login</string>
    <string name="logout">Logout</string>
    <string name="newacc">Create a new account</string>
    <string name="details">Forgot your details?</string>
    <string name="your_list">YOUR LIST</string>
    <string name="rate_label">Rate this</string>
    <string name="login_error">Wrong username or password</string>
    <string name="logout_done">Logout done</string>
    <string name="exit">Press Back again to Exit.</string>
    <string name="empty_rate">You need to rate this !</string>
    <string name="sucess_rate">Rate added</string>
    <string name="account">ACCOUNT</string>
    <string name="notification">ACCOUNT NOTIFICATION</string>
    <string name="name">Name: </string>
    <string name="tv_notificattion">Tv shows notification</string>
    <string name="m_notificattion">Movies notification</string>
    <string name="settings">Settings</string>
    <string name="facebook_app_id">672699442907366</string>
    <string name="title_activity_maps">Map</string>
    <string name="rate">Tap to rate</string>
    <string name="maps">Nearest cinemas</string>
    <string name="no_network">Network is not available</string>
    <string name="enable_location">You need to enable location to see nearest cinemas.</string>


</resources>
