<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey"
    tools:context="ba.unsa.etf.rma.elza_kalac.movieapp.Activities.Login">
    
    <EditText
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:id="@+id/username"
        android:layout_marginStart="24dp"
        android:textColor="@color/white"
        android:hint="@string/username"
        android:singleLine="true"
        android:textColorLink="@color/golden"
        android:textColorHint="@color/lightgrey"
        android:layout_marginEnd="24dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:id="@+id/password"
        android:inputType="textWebPassword"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:textColor="@color/white"
        android:hint="@string/password"
        android:nextFocusForward="@+id/login"
        android:textColorHint="@color/lightgrey"
        android:layout_marginBottom="10dp"
        android:layout_below="@+id/username"/>
    
    <Button
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:id="@+id/login"
        android:background="@color/golden"
        android:text="@string/login"
        android:layout_below="@+id/password"
        android:layout_marginTop="40dp"
        android:layout_centerInParent="true"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/forgot_details"
        android:textColor="@color/lightgrey"
        android:text="@string/details"
        android:layout_below="@+id/login"
        android:layout_marginTop="20dp"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/new_acc"
        android:text="@string/newacc"
        android:textSize="15sp"
        android:textColor="@color/white"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"/>

</RelativeLayout>
