<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_settings"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="ba.unsa.etf.rma.elza_kalac.movieapp.Activities.UserPrivilegies.Settings">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/acc"
        android:text="@string/account"
        android:textSize="12sp"
        android:textColor="@color/golden"
        android:background="@color/colorPrimaryDark"
        android:padding="20dp"
        android:paddingLeft="16dp"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/name_label"
            android:textSize="14sp"
            android:textColor="@color/lightgrey"
            android:padding="20dp"
            android:paddingLeft="16dp"
            android:text="@string/name"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/name"
            android:textSize="14sp"
            android:padding="20dp"
            android:paddingLeft="16dp"
            />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/username_label"
                android:textColor="@color/lightgrey"
                android:textSize="14sp"
                android:padding="20dp"
                android:paddingLeft="16dp"
                android:text="@string/username"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/username"
                android:textColor="@color/lightgrey"
                android:textSize="14sp"
                android:padding="20dp"
                android:paddingLeft="16dp"
                />
    </LinearLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/acc_not"
        android:text="@string/notification"
        android:textSize="16sp"
        android:textColor="@color/golden"
        android:background="@color/colorPrimaryDark"
        android:padding="20dp"
        android:paddingLeft="16dp"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/lightgrey"
            android:text="@string/m_notificattion"
            android:textSize="14sp"/>
        <View
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            />
        <Switch
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/lightgrey"
            android:textSize="14sp"
            android:text="@string/tv_notificattion"/>
        <View
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />
        <Switch
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>
</LinearLayout>
